# csgo_gc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yml
client/: CMakeLists.txt
client/include/: networking_server.h
client/src/: case_opening.cpp  config.cpp  gc_message.cpp  gc_server.cpp  gc_shared.cpp  inventory.cpp  item_schema.cpp  main.cpp  networking_client.cpp  platform_unix.cpp  platform_windows.cpp  steam_hook.cpp
csgo_gc/: CMakeLists.txt  gc_client.cpp  gc_message.cpp  gc_message.h
csgo_gc/include/: config.h  gc_server.h  inventory.h  networking_server.h  stdafx.h
csgo_gc/src/: appid.cpp  gc_client.cpp  graffiti.cpp  keyvalue.cpp  networking_server.cpp
protobufs/: base_gcmessages.pb.cc  base_gcmessages.pb.h  cstrike15_gcmessages.pb.cc  cstrike15_gcmessages.pb.h  custommessages.pb.cc  custommessages.pb.h  custommessages.proto  econ_gcmessages.pb.cc  econ_gcmessages.pb.h  engine_gcmessages.pb.cc  engine_gcmessages.pb.h  gcsdk_gcmessages.pb.cc  gcsdk_gcmessages.pb.h  gcsystemmsgs.pb.cc  gcsystemmsgs.pb.h  gcsystemmsgs.proto  steammessages.pb.cc  steammessages.pb.h
server/: CMakeLists.txt  main.cpp
server/include/: stdafx.h
server/src/: main.cpp
